# Cpp_project_template

./: .gitignore  .travis.yml  CMakeInstallation.cmake  CMakeLists.txt  CPackConfig.cmake  LICENSE  Makefile  README.md  appveyor.yml  build.bat  build.sh  configure.sh  coverage.ignore  create_VS_solution.bat  create_windows_installer.bat  project_version.h.in  setup_environment.bat  sonar-project.properties
cmake/modules/: CodeCoverage.cmake  CodeCoverageCucumber.cmake  CodeCoverageIgloo.cmake  FindCatch.cmake  FindCppSpec.cmake  FindCuke.cmake  FindGMock.cmake  FindIgloo.cmake
doxygen/: Doxyfile.in  development_environment.dox  features.dox  introduction.dox  mainpage.dox
include/: dummy.h  project_version.h
scripts/: gcovr
src/: CMakeLists.txt  dummy.cpp  main.cpp
tests/: coverage.ignore
tests/catch/: CMakeLists.txt  dummy_scenario_catch.cpp  dummy_test_catch.cpp
tests/catch/include/: googlemock_catch_listener.h
tests/catch/src/: main.cpp  mock_test_catch.cpp
tests/feature/: CMakeLists.txt  Gemfile  cucumber.yml
tests/feature/features/: 001-Dummy.feature  002-Mock_Framework.feature
tests/feature/features/step_definition/: dummy_steps.cpp
tests/feature/features/step_definitions/: dummy_steps.cpp  mock_steps.cpp
tests/igloo/: CMakeLists.txt  doxtestlistener.h  dummy_describe.cpp  dummy_spec.cpp  dummy_when_then.cpp  main.cpp
tests/igloo/src/: doxtestlistener.h  dummy_describe.cpp  dummy_spec.cpp
tests/spec/: CMakeLists.txt
tests/spec/include/: dummy_spec.h
tests/spec/src/: dummy_spec.cpp  specs.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: dummy_test.cpp  gmock_test.cpp
